fix(Logo-Icon): also updated visuals of login page, with respect to light and dark mode

--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -1,14 +1,33 @@
-.login-main {
-   display: flex;
+.main-login {
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    max-width: 250px;
+    height: 100vh; /* Full viewport height */
+    max-width: 100%; /* Full viewport width */
     margin: 0 auto;
     text-align: center;
     flex-direction: column;
 }
-.logo-login {
+
+.login-container {
+    background-color: rgb(280, 280, 280);
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.login-container.light-mode {
+    border: 2px solid #ccc; /* Add border for light mode */
+}
+
+.login-logo {
     height: 55px;
     margin-bottom: 20px;
+}
+
+.logo-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
 }
