--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -9,7 +9,7 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.brand {
+.brand-nav {
     font-size: 1.5rem;
     font-weight: bold;
     color: #fff;
